--- a/style.css
+++ b/style.css
@@ -166,3 +166,31 @@ padding: 10px 20px;
     white-space: normal;
   }
 }
+.Button {
+  position: relative;
+  top: 0px;
+  padding: 15px 25px;
+  border: solid #1a1a1a 3px;
+  border-radius: 20px;
+  margin: 10px;
+  box-shadow: 0px 10px 0px #1a1a1a;
+}
+
+.Button:hover {
+  top: 2px;
+  box-shadow: 0px 8px 0px #1a1a1a;
+}
+.Button:active {
+  transition: 100ms ease;
+  top: 8px;
+  box-shadow: 0px 2px 0px #1a1a1a;
+}
+a {
+  color: #00ff22;
+  text-decoration: none;
+  cursor: grab;
+  top: 20%;
+  left: 80%;
+  font-family: Roboto, sans-serif;
+  font-weight: bold;
+}
